# rmenu

./: Cargo.toml  README.md
examples/: reasonable_main_usage.rs
src/: command.rs  config.rs  gui.rs  gui_result.rs  lib.rs  main.rs  reasonable.rs
src/reasonable_main/: command.rs  main.rs  mod.rs
